[tool.poetry]
name = "style-image"
version = "0.1.0"
description = ""
authors = ["Zinan Jiang <zinanjiang628@gmail.com>"]
readme = "README.md"
packages = [{include = "style_image"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
